# autonomous_arena

./: CMakeLists.txt  README.md  package.xml  setup.sh
materials/: gazebo.material
models/big_cone/: model.sdf
models/blue_cone/: model.sdf
models/orange_cone/: model.sdf
models/yellow_cone/: model.sdf
worlds/: small_track.world
